--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       Current Employee
     </div>
     <div class="card-body">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-md-2">
             <p>Employee Name</p>
