--- a/index.html
+++ b/index.html
@@ -44,13 +44,35 @@
       </div>
     </div>
   </div>
+
   <div class="card">
+        <div class="card-header">
+                Add Employee
+              </div>
     <div class="card-body">
-      <div class="container">
-        <div class="row">
+        <form>
+            <div class="form-group">
+              <label for="formGroupExampleInput">Employee Name</label>
+              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+            </div>
+            <div class="form-group">
+              <label for="formGroupExampleInput2">Role</label>
+              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+            </div>
+            <div class="form-group">
+                    <label for="formGroupExampleInput">Start Date (MM/DD/YYYY)</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                  </div>
+                  <div class="form-group">
+                    <label for="formGroupExampleInput2">Monthly Rate ($)</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                  </div>
+
+                  <input class="btn" type="Submit" value= "Submit Form"> 
+          </form>
+
+
           
-        </div>
-      </div>
     </div>
   </div>
 
