--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
         <form>
             <div class="form-group">
               <label for="formGroupExampleInput">Employee Name</label>
-              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+              <input type="text" class="form-control" id="name" placeholder="Example input">
             </div>
             <div class="form-group">
               <label for="formGroupExampleInput2">Role</label>
-              <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+              <input type="text" class="form-control" id="role" placeholder="Another input">
             </div>
             <div class="form-group">
                     <label for="formGroupExampleInput">Start Date (MM/DD/YYYY)</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                    <input type="text" class="form-control" id="startDate" placeholder="Example input">
                   </div>
                   <div class="form-group">
                     <label for="formGroupExampleInput2">Monthly Rate ($)</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                    <input type="text" class="form-control" id="rate" placeholder="Another input">
                   </div>
 
                   <input class="btn" type="Submit" value= "Submit Form"> 
