updated IDs of JS and HTML

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <input type="text" class="form-control" id="rate" placeholder="Another input">
                   </div>
 
-                  <input class="btn" type="Submit" value= "Submit Form"> 
+                  <input class="btn" type="Submit" value= "Submit Form" id="add-user"> 
           </form>
 
 
