--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+    <script  src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 
 </head>
 
@@ -68,7 +72,7 @@
                     <input type="text" class="form-control" id="rate" placeholder="Another input">
                   </div>
 
-                  <input class="btn" type="Submit" value= "Submit Form" id="add-user"> 
+                  <input class="btn" type="button" value= "Submit Form" id="add-user"> 
           </form>
 
 
